# optimal-option-portfolios

./: .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
artifacts/: reproduction_report.json
docs/: api-reference.md  architecture.md  deployment.md  faq.md  fidelity_report.md  getting-started.md  mismatch_report.md  release.md  research_determination.md
scripts/: demo.py
src/oop/: __init__.py  cli.py  config.py  determinism.py  logging_utils.py  moments.py  optimization.py  pipeline.py  pricing.py  reproduction_math.py  risk.py  types.py
tests/: test_config.py  test_determined_quantities.py  test_determinism.py  test_optimization.py  test_risk.py
